@@ -7,6 +7,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Clean up DECnet address handling.
       Finalize moving of bpf_filter.c. (GH #1166)
       Address a few compiler warnings on Haiku.
+      struct pcap: Update buffer type from "void *" to "u_char *".
     Link-layer types:
       Add LINKTYPE_ETW/DLT_ETW.
       Add LINKTYPE_NETANALYZER_NG/DLT_NETANALYZER_NG (pull request
